--- a/package.json
+++ b/package.json
@@ -1,30 +1,21 @@
 {
-  "name": "portfolio2",
+  "name": "portfolio",
   "version": "1.0.0",
   "description": "A portfolio of Pablo Bermejo",
   "main": "index.js",
-  "repository": "gog",
-  "author": "Pablo Bermejo",
+  "repository": "https://github.com/pbermejo/pbermejo.github.io.git",
+  "author": "pbermejo <pbermejo.dev@gmail.com>",
   "license": "MIT",
-  "private": true,
+  "dependencies": {},
   "devDependencies": {
-    "browser-sync": "^2.23.6",
+    "browser-sync": "^2.26.7",
     "del": "^5.1.0",
-    "fs": "0.0.1-security",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
-    "gulp-cache": "^1.0.2",
+    "gulp-cache": "^1.1.3",
     "gulp-data": "^1.3.1",
     "gulp-nunjucks-render": "^2.2.3",
-    "gulp-sass": "^4.0.1",
-    "gulp-sourcemaps": "^2.6.4"
-  },
-  "dependencies": {
-    "browserslist": "^4.8.2",
-    "caniuse-lite": "^1.0.30001017"
-  },
-  "scripts": {
-    "start": "node index",
-    "dev": "nodemon index"
+    "gulp-sass": "^4.1.0",
+    "gulp-sourcemaps": "^2.6.5",
+    "nunjucks": "^3.2.1"
   }
 }
