--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "repository": "https://github.com/pbermejo/pbermejo.github.io.git",
   "author": "pbermejo <pbermejo.dev@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "node index",
+    "dev": "nodemon index"
+  },
   "dependencies": {},
   "devDependencies": {
     "browser-sync": "^2.26.7",
@@ -15,7 +19,6 @@
     "gulp-data": "^1.3.1",
     "gulp-nunjucks-render": "^2.2.3",
     "gulp-sass": "^4.1.0",
-    "gulp-sourcemaps": "^2.6.5",
-    "nunjucks": "^3.2.1"
+    "gulp-sourcemaps": "^2.6.5"
   }
 }
